--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>SPA project</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./index.scss">
   <script type="module" src="./index.ts"></script>
 </head>
 <body>
 <nav id="menu">
-  <button id="error404">404</button>
-  <button id="error500">500</button>
-  <button id="login">Login</button>
-  <button id="signin">Signin</button>
-  <button id="profile">Profile</button>
-  <button id="chats">Chats</button>
+  <a href="/">login</a>
+  <a href="/sign-up">sign-up</a>
+  <a href="/settings">settings</a>
+  <a href="/messenger">messenger</a>
+  <a href="/abrakadabra">abracadabra</a>
 </nav>
 <div id="app"></div>
 </body>
