--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>SPA project</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./index.scss">
-  <script type="module" src="./index.ts"></script>
+    <meta charset="UTF-8">
+    <title>SPA project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 <nav id="menu">
-  <a href="/">login</a>
-  <a href="/sign-up">sign-up</a>
-  <a href="/settings">settings</a>
-  <a href="/messenger">messenger</a>
-  <a href="/abrakadabra">abracadabra</a>
+    <a href="/">login</a>
+    <a href="/sign-up">sign-up</a>
+    <a href="/settings">settings</a>
+    <a href="/messenger">messenger</a>
+    <a href="/abrakadabra">abracadabra</a>
 </nav>
-<div id="app"></div>
+<main id="app"></main>
 </body>
 </html>
